--- a/index.html
+++ b/index.html
@@ -39,6 +39,22 @@
             overflow: hidden;
         }
 
+        .viz-iframe {
+            width: 100%;
+            height: 100%;
+            border: none;
+        }
+
+        .loading-message {
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            color: #333;
+            font-size: 1.2em;
+            display: block;
+        }
+
         .error-message {
             display: none;
             color: #ff4444;
@@ -61,48 +77,31 @@
         <h1>Interactive Tableau Dashboard 📈✨</h1>
         <p>Explore the Office New Dashboard below! 👇</p>
         <div class="viz-container" id="vizContainer">
-            <!-- Tableau viz will be embedded here -->
+            <div class="loading-message" id="loadingMessage">Loading Dashboard... ⏳</div>
+            <iframe 
+                class="viz-iframe"
+                src="https://public.tableau.com/views/OfficeNew1/Dashboard2?:language=en-US&:display_count=n&:origin=viz_share_link"
+                allowfullscreen
+                title="Tableau Dashboard"
+                onload="document.getElementById('loadingMessage').style.display='none';"
+                onerror="document.getElementById('loadingMessage').style.display='none'; document.getElementById('errorMessage').style.display='block';"
+            ></iframe>
         </div>
         <div class="error-message" id="errorMessage">
             Oops! Something went wrong loading the dashboard. Please try refreshing the page. 😕
         </div>
     </div>
 
-    <script type="module">
-        import 'https://public.tableau.com/javascripts/api/tableau.embedding.3.latest.min.js';
-
-        // Tableau viz configuration
-        const vizUrl = 'https://public.tableau.com/views/OfficeNew1/Dashboard2?:language=en-US&:display_count=n&:origin=viz_share_link';
-        const vizContainer = document.getElementById('vizContainer');
+    <script>
+        // Basic error handling and loading state
+        const iframe = document.querySelector('.viz-iframe');
+        const loadingMessage = document.getElementById('loadingMessage');
         const errorMessage = document.getElementById('errorMessage');
 
-        // Create the Tableau viz element
-        const viz = document.createElement('tableau-viz');
-        viz.setAttribute('id', 'tableauViz');
-        viz.setAttribute('src', vizUrl);
-        viz.setAttribute('width', '100%');
-        viz.setAttribute('height', '100%');
-        viz.setAttribute('toolbar', 'bottom'); // Optional: customize toolbar position
-        viz.setAttribute('hide-tabs', 'true'); // Optional: hide tabs if any
-
-        // Append viz to container
-        vizContainer.appendChild(viz);
-
-        // Error handling
-        viz.addEventListener('firstinteractive', () => {
-            console.log('Tableau dashboard loaded successfully!');
-        });
-
-        viz.addEventListener('error', (e) => {
-            console.error('Error loading Tableau viz:', e);
-            vizContainer.style.display = 'none';
-            errorMessage.style.display = 'block';
-        });
-
-        // Fallback timeout in case viz doesn't load
+        // Fallback timeout
         setTimeout(() => {
-            if (!viz.viz) {
-                vizContainer.style.display = 'none';
+            if (iframe.contentWindow.length === 0) { // Check if iframe is empty
+                loadingMessage.style.display = 'none';
                 errorMessage.style.display = 'block';
             }
         }, 10000); // 10 seconds timeout
