--- a/index.html
+++ b/index.html
@@ -3,108 +3,33 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Interactive Tableau Dashboard 📊</title>
+    <title>Interactive Tableau Dashboard</title>
     <style>
         body {
-            font-family: 'Arial', sans-serif;
             margin: 0;
-            padding: 0;
-            background: linear-gradient(135deg, #6e8efb, #a777e3);
-            min-height: 100vh;
-            color: #fff;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-        }
-
-        .container {
-            max-width: 1200px;
             padding: 20px;
-            text-align: center;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            min-height: 100vh;
+            background-color: #f0f0f0;
         }
-
-        h1 {
-            font-size: 2.5em;
-            margin: 20px 0;
-            text-shadow: 2px 2px 4px rgba(0,0,0,0.3);
-        }
-
-        .viz-container {
-            background: #fff;
-            border-radius: 10px;
-            box-shadow: 0 5px 15px rgba(0,0,0,0.2);
+        tableau-viz {
             width: 100%;
-            height: 600px;
-            position: relative;
-            overflow: hidden;
-        }
-
-        .viz-iframe {
-            width: 100%;
-            height: 100%;
-            border: none;
-        }
-
-        .loading-message {
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-            color: #333;
-            font-size: 1.2em;
-            display: block;
-        }
-
-        .error-message {
-            display: none;
-            color: #ff4444;
-            font-size: 1.2em;
-            margin-top: 20px;
-        }
-
-        @keyframes fadeIn {
-            from { opacity: 0; }
-            to { opacity: 1; }
-        }
-
-        .container {
-            animation: fadeIn 1s ease-in;
+            max-width: 1000px; /* Adjust as needed */
+            height: 800px; /* Adjust based on dashboard size */
         }
     </style>
 </head>
 <body>
-    <div class="container">
-        <h1>Interactive Tableau Dashboard 📈✨</h1>
-        <p>Explore the Office New Dashboard below! 👇</p>
-        <div class="viz-container" id="vizContainer">
-            <div class="loading-message" id="loadingMessage">Loading Dashboard... ⏳</div>
-            <iframe 
-                class="viz-iframe"
-                src="https://public.tableau.com/views/OfficeNew1/Dashboard2?:language=en-US&:display_count=n&:origin=viz_share_link"
-                allowfullscreen
-                title="Tableau Dashboard"
-                onload="document.getElementById('loadingMessage').style.display='none';"
-                onerror="document.getElementById('loadingMessage').style.display='none'; document.getElementById('errorMessage').style.display='block';"
-            ></iframe>
-        </div>
-        <div class="error-message" id="errorMessage">
-            Oops! Something went wrong loading the dashboard. Please try refreshing the page. 😕
-        </div>
-    </div>
+    <!-- Link to Tableau Embedding API v3 -->
+    <script type="module" src="https://public.tableau.com/javascripts/api/tableau.embedding.3.latest.min.js"></script>
 
-    <script>
-        // Basic error handling and loading state
-        const iframe = document.querySelector('.viz-iframe');
-        const loadingMessage = document.getElementById('loadingMessage');
-        const errorMessage = document.getElementById('errorMessage');
-
-        // Fallback timeout
-        setTimeout(() => {
-            if (iframe.contentWindow.length === 0) { // Check if iframe is empty
-                loadingMessage.style.display = 'none';
-                errorMessage.style.display = 'block';
-            }
-        }, 10000); // 10 seconds timeout
-    </script>
+    <!-- Embed the Tableau Dashboard -->
+    <tableau-viz id="tableauViz"
+                 src="https://public.tableau.com/views/OfficeNew1/Dashboard2"
+                 toolbar="bottom"
+                 hide-tabs>
+    </tableau-viz>
 </body>
 </html>
